<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShoppingApp3</string>
    <string name="shopping_app_title">Shopping App</string>
    <string name="developer_name">PCorletto 2016</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_home">Home</string>
    <string name="scan">Scan</string>
    <string name="error_ok_button_text">Oops! Sorry!</string>
    <string name="network_unavailable_message">Network is unavailable</string>
    <string name="product_name_label">Product Name:</string>
    <string name="price_label">Price:</string>
    <string name="quantity_label">Quantity:</string>
    <string name="plus_button_label">+</string>
    <string name="minus_button_label">-</string>
    <string name="store_new_item_label">START</string>
    <string name="shopping_cart">shopping cart</string>
    <string name="shopping_list">SHOPPING LIST</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="store_button_label">Store</string>
    <string name="display_list_button_label">View List</string>
    <string name="quantity_label_2">Qty.</string>
    <string name="product_name_label2">Product Name</string>
    <string name="unit_price_label">Unit Price</string>
    <string name="category_label">Category</string>
    <string name="subtotal_label">SubTotal</string>
    <string name="item_count_label">Item Count</string>
    <string name="total_price_label">Total Price</string>
    <string name="sales_tax_label">Sales Tax</string>
    <string name="final_price_label">Final Price</string>
    <string name="return_main_button_label">Return to the Main Screen</string>
    <string name="title_activity_display_shopping_list">DisplayShoppingList</string>
    <string name="no_shopping_items_prompt">There are no shopping items to display!</string>
    <string name="delete_selected_items_button">Delete Checked Items</string>
    <string name="update_selected_items_button">Update Checked Items</string>
    <string name="no_purchase_items_prompt">There are no purchase items to display!</string>
    <string name="ROW_NUMBER">ROW_NUMBER</string>
    <string name="PURCHASE_LIST">PURCHASE_LIST</string>
    <string name="ITEM_COUNT">ITEM_COUNT</string>
    <string name="TOTAL_PRICE">TOTAL_PRICE</string>
    <string name="SALES_TAX">SALES_TAX</string>
    <string name="FINAL_PRICE">FINAL_PRICE</string>
    <string name="LIST">LIST</string>
    <string name="PREF_FILE">PREF_FILE</string>
    <string name="PURCHASE_ID">PURCHASE_ID</string>
    <string name="title_activity_display_list">DisplayListActivity</string>
    <string name="title_activity_display_cart">DisplayCartActivity</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="scan_new_product">Scan-In New Item</string>
    <string name="view_shopping_list">View Shopping List</string>

    <!-- Label for the language preference [CHAR LIMIT=30] -->
    <string name="pref_language_label">Language</string>

    <!-- Label for English option in language preference [CHAR LIMIT=25] -->
    <string name="pref_language_label_english">English</string>

    <!-- Label for Spanish option in language preference [CHAR LIMIT=25] -->
    <string name="pref_language_label_spanish">Español</string>

    <!-- Key name for language preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_language_key" translatable="false">language</string>

    <!-- Key name for language default in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_language_default" translatable="false">English</string>

    <!-- Value in SharedPreferences for English language option [CHAR LIMIT=NONE] -->
    <string name="pref_language_english" translatable="false">English</string>

    <!-- Value in SharedPreferences for Spanish language option [CHAR LIMIT=NONE] -->
    <string name="pref_language_spanish" translatable="false">Español</string>

    <!-- Label for the sort preference [CHAR LIMIT=30] -->
    <string name="pref_sort_label">Sort Order</string>

    <!-- Label for alphabetical option in sort preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_alphabetical">By Product Name: A-Z</string>

    <!-- Label for priority option in sort preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_priority">By Priority: Hi to Low</string>

    <!-- Label for no sort option in sort preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_no_sort">Not Sorted</string>

    <!-- Key name for sort preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_sort_key" translatable="false">sort</string>

    <!-- Key name for sort default in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_sort_default" translatable="false">no sort</string>

    <!-- Value in SharedPreferences for alphabetical sort option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_alphabetical" translatable="false">alphabetical</string>

    <!-- Value in SharedPreferences for priority sort option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_priority" translatable="false">priority</string>

    <!-- Value in SharedPreferences for no sort option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_no_sort" translatable="false">no sort</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="empty_product_name_alert">No product name! Please scan again.</string>
    <string name="empty_price_alert">No price! Please scan again.</string>
    <string name="empty_quantity_alert">No quantity! Please select it.</string>
    <string name="empty_four_digits_alert">No last four digits entered! Please enter!</string>
    <string name="not_four_digits_alert">You did not enter 4 digits! Please check!</string>
    <string name="not_digits_alert">You did not enter only digits! Please check!</string>
    <string name="calling_activity_name">calling_activity_name</string>
    <string name="share_using">Share using</string>
    <string name="title_activity_display_purchase">DisplayPurchaseActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="preceding_activity_name">preceding_activity_name</string>
    <string name="product_name">product_name</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="on_back_pressed_alert">Press again to close app</string>

</resources>
