<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <ListPreference
    android:title="@string/pref_language_label"
    android:key="@string/pref_language_key"
    android:defaultValue="@string/pref_language_english"
    android:entryValues="@array/pref_language_values"
    android:entries="@array/pref_language_options" />

    <ListPreference
        android:title="@string/pref_sort_label"
        android:key="@string/pref_sort_key"
        android:defaultValue="@string/pref_sort_no_sort"
        android:entryValues="@array/pref_sort_values"
        android:entries="@array/pref_sort_options" />

</PreferenceScreen>