<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_home"
          android:title="@string/action_home"
          android:icon="@drawable/ic_home"
          android:orderInCategory="100"
          app:showAsAction="always"/>

    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:icon="@drawable/ic_share"
          android:orderInCategory="200"
          app:showAsAction="always"/>

    <item android:id="@+id/action_list"
          android:title="List Purchases"
          android:orderInCategory="300"
          app:showAsAction="always"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="400"
          app:showAsAction="never"/>
</menu>