<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/mainLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout1">

            <TextView
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity_label_2"
                android:id="@+id/quantityLabel"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_dark"/>

            <TextView
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:text="@string/product_name_label2"
                android:id="@+id/productNameLabel"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout2">

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:text="@string/minus_button_label"
                android:id="@+id/decrementButton"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:text="@string/plus_button_label"
                android:id="@+id/incrementButton"/>

            <EditText
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/quantityEditText"
                android:gravity="center_horizontal"/>

            <EditText
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/productNameEditText"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout3">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/unit_price_label"
                android:id="@+id/unitPriceLabel"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/category_label"
                android:id="@+id/categoryLabel"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_dark"/>

            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:text="@string/subtotal_label"
                android:id="@+id/subtotalLabel"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_green_dark"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout4">

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/unitPriceEditText"
                android:gravity="center_horizontal"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/categoryEditText"/>

            <EditText
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:id="@+id/subtotalEditText"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>