<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/backgroundtwo"
               tools:context="com.example.android.shoppingapp3.ui.EditActivity">

<include
    android:id="@+id/tool_bar"
    layout="@layout/tool_bar">
</include>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout1"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name_label"
                android:id="@+id/productNameLabel"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productNameEditText"
                android:inputType="textMultiLine"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout1"
            android:id="@+id/layout2"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Category:"
                android:id="@+id/categoryLabel"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/categoryEditText"
                android:inputType="textMultiLine"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/layout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_label"
                android:id="@+id/priceLabel"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/priceEditText"
                android:textColor="@android:color/white"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/layout4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quantity:  "
                android:id="@+id/textView3"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/quantityEditText"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/layout5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Priority:  "
                android:id="@+id/textView4"
                android:gravity="center_vertical"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="3"
                android:stepSize="1.0"
                android:rating="0" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout5"
            android:text="3-stars = highest priority\n1-star = lowest priority"
            android:id="@+id/textView5"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:id="@+id/layout6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Taxable?"
                android:id="@+id/textView7"/>

            <RadioGroup android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/radioGroup"
                        android:gravity="center_horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:onClick="onRadioButtonClicked"
                    android:id="@+id/yesRadioButton"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:onClick="onRadioButtonClicked"
                    android:id="@+id/noRadioButton"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/layout7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Quantity Purchased:"
                android:id="@+id/lastQuantityPurchasedLabel"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastQuantityPurchasedEditText"
                android:textColor="@android:color/white"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/layout8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Date Purchased:"
                android:id="@+id/lastDatePurchasedLabel"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastDatePurchasedEditText"
                android:textColor="@android:color/white"
                android:inputType="text"/>

        </LinearLayout>

        <Button

            android:id="@+id/save_changes_button"
            android:layout_below="@+id/layout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Save Changes"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_shopping_list"
            android:id="@+id/display_button"
            android:layout_below="@+id/save_changes_button"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

</ScrollView>

</LinearLayout>


